--- a/study/daum-grid.css
+++ b/study/daum-grid.css
@@ -13,6 +13,8 @@ main {
   display: grid;
   /* width: 100vw;
   height: 100vh; */
+  width: 60%;
+  margin: auto;
   background-color: #eee;
   border: 1px solid #e1e1e1;
   border-radius: 20px;
