--- a/study/daum-grid.css
+++ b/study/daum-grid.css
@@ -18,30 +18,62 @@ main {
   border-radius: 20px;
   gap: 20px;
   grid-template-columns: 2fr 1fr;
-  grid-auto-rows: 1fr;
-  grid-auto-flow: column;
   padding: 20px;
   background: #eee;
 }
 
 main > * {
-  border: 1px solid;
+  border: 1px solid #e1e1e1;
   border-radius: 1rem;
 
   padding: 1rem;
 }
-#left {
+
+.left > * {
   border: solid 2px #e1e1e1;
-  grid-column: 1/2;
+  padding: 1rem;
+  border-radius: 1rem;
+  background-color: #fff;
 }
-#right {
+
+.left {
+  display: grid;
+  /* grid-column: 1/2;
+  grid-auto-flow: column; */
+  grid-auto-rows: 1fr;
+  gap: 20px;
+}
+
+.right > * {
   border: solid 2px #e1e1e1;
+  padding: 1rem;
+  border-radius: 1rem;
+  background-color: #fff;
+}
+
+.right {
+  display: grid;
+  gap: 20px;
+  grid-auto-rows: 1fr;
+  /* grid-auto-flow: column; */
   grid-column: 2/3;
 }
+
 .ad {
   grid-row: span 2;
+  max-height: 130px;
+  display: flex;
+  /* padding: 0; */
+  justify-content: center;
+}
+
+.ad > img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 .news {
+  margin-top: -20px;
   grid-row: span 7;
 }
 .news-sub {
@@ -73,6 +105,7 @@ main > * {
 }
 
 .login {
+  min-height: 130px;
   grid-row: span 2;
 }
 
